# advent-of-code

./: .gitignore  intcode.py  pyproject.toml  requirements.txt  solve_01.py  solve_02.py  solve_03.py  solve_04.py  solve_05.py  solve_06.py  solve_07.py  solve_08.py  solve_09.py  solve_10.py  solve_11.py  solve_12.py  solve_13.py  solve_14.py  solve_16.py  solve_22.py  test_solutions.py  util.py
2019/inputs/: solve_04.py  solve_05.py  solve_06.py  solve_11.py  solve_13.py  solve_15.py  solve_22.py  test_solutions.py
2020/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py
2021/: day1.py  day2.py  day6.py
aoc2022/day1/src/: main.rs
aoc2022/src/: day01.rs  main.rs  utils.rs
