[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = "My attempt to solve Advent of Code programming puzzles."
authors = ["Tan Jiann Meng <jiannmeng@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
advent-of-code-data = "^0.9.8"

[tool.poetry.dev-dependencies]
flake8-black = "^0.2.1"
pytest = "^6.2.2"
rich = "^10.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
